cmake_minimum_required(VERSION 2.8)
SET(THIS_PROJECT "test_mercator")
Project(${THIS_PROJECT})

SET(ENV{MACHINE_ARCHITECTURE} )

IF(WIN32)
	IF(CMAKE_CL_64)
		SET(ENV{MACHINE_ARCHITECTURE} "x64")
	ELSE()
		SET(ENV{MACHINE_ARCHITECTURE} "x86")
	ENDIF()
ENDIF()


OPTION(DEBUG_MODE "ON for debug or OFF for release" OFF)
IF(DEBUG_MODE)
	SET(CMAKE_BUILD_TYPE "Debug" CACHE STRING "Configs" FORCE)
ELSE()
	SET(CMAKE_BUILD_TYPE "Release" CACHE STRING "Configs" FORCE)
ENDIF()
SET(CMAKE_CONFIGURATION_TYPES "${CMAKE_BUILD_TYPE}" CACHE STRING "Configs" FORCE)
INCLUDE_DIRECTORIES( "${CMAKE_CURRENT_SOURCE_DIR}/include")
FILE(GLOB THIS_EXE_SRCS RELATIVE_PATH ${CMAKE_CURRENT_SOURCE_DIR} "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp" )
FILE(GLOB THIS_EXE_HEADERS RELATIVE_PATH "${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}/*.h")

IF(WIN32)
	SET(INSTALL_FRAMEWORK_DIR "Frameworks")
	SET(INSTALL_INCLUDE_DIR   "include")
	SET(INSTALL_RUNTIME_DIR   "bin/$ENV{MACHINE_ARCHITECTURE}/${CMAKE_BUILD_TYPE}")
	SET(INSTALL_LIBRARY_DIR   "lib/$ENV{MACHINE_ARCHITECTURE}/${CMAKE_BUILD_TYPE}")
	SET(INSTALL_ARCHIVE_DIR   "lib/$ENV{MACHINE_ARCHITECTURE}/${CMAKE_BUILD_TYPE}")
	SET(CMAKE_DEBUG_POSTFIX "d" CACHE STRING "Debug variable used to add the postfix to dll's and exe's.  Defaults to 'd' on WIN32 builds and empty on all other platforms" FORCE)
	SET( CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" CACHE PATH
     "Path to custom CMake Modules" FORCE )
	SET( INSTALL_DOC "${INSTALL_DOC}" CACHE BOOL
     "Set to OFF to skip build/install Documentation" FORCE )
	#######################BUILD###########################################
	SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin/$ENV{MACHINE_ARCHITECTURE}")
	SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/lib/$ENV{MACHINE_ARCHITECTURE}")
	SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/lib/$ENV{MACHINE_ARCHITECTURE}")
	###################################################################################
	SET(CMAKE_INSTALL_SYSTEM_RUNTIME_DESTINATION "bin")
	##LINK
	#LINK_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/lib/$ENV{MACHINE_ARCHITECTURE}/${CMAKE_BUILD_TYPE}")
ELSE(WIN32)

ENDIF(WIN32)


add_executable(${THIS_PROJECT} ${THIS_EXE_SRCS} ${THIS_EXE_HEADERS})


 
